--- a/44372224/app/Resources/views/base.html.twig
+++ b/44372224/app/Resources/views/base.html.twig
@@ -8,8 +8,10 @@
     </head>
     <body>
         {{- render(controller('AppBundle:Project:widget')) -}}
+        {{- renderProjectSelector() -}}
 
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+
     </body>
 </html>
